feat: add startMission
