# src/dtos/missionDto.js
@@ -4,3 +4,10 @@ export const addMissionResponseDTO = (mission) => {
         content: mission[0].content,
     }
 }
+
+export const tryMissionResponseDTO = (missionStatus) => {
+    return {
+        mission_id: missionStatus[0].mission_id,
+        status: missionStatus[0].status,
+    }
+}
