# src/routes/missionRoute.js
@@ -1,8 +1,12 @@
 import express from "express"
 import asyncHandler from "express-async-handler"
 
-import { missionCreate } from "../controllers/missionController.js"
+import {
+    missionCreate,
+    missionStart,
+} from "../controllers/missionController.js"
 
 export const missionRoute = express.Router()
 
 missionRoute.post("/", asyncHandler(missionCreate))
+missionRoute.post("/:missionId", asyncHandler(missionStart))
