# swagger/main.yaml
@@ -389,3 +389,83 @@ paths:
                             message:
                                 type: string
                                 example: 서버 에러, 관리자에게 문의 바랍니다.
+    /missions/{mission-id}:
+        post:
+            tags:
+                - Mission
+            summary: 미션 도전
+            parameters:
+                - name: mission-id
+                  in: path
+                  schema:
+                      type: int
+                - name: addReview
+                  in: body
+                  schema:
+                      properties:
+                          user_id:
+                              type: int
+                              description: 유저 아이디
+                              example: 19
+            responses:
+                "200":
+                    description: 회원 가입 성공!
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: integer
+                                example: 200
+                            isSuccess:
+                                type: boolean
+                                example: true
+                            code:
+                                type: integer
+                                example: 2000
+                            message:
+                                type: string
+                                example: "success!"
+                            data:
+                                type: object
+                                example:
+                                    {
+                                        "email": "swaggerTest@mail.com",
+                                        "name": "swagger",
+                                        "preferCategory": ["한식", "일식"],
+                                    }
+
+                "400":
+                    description: 잘못된 요청
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: integer
+                                example: 400
+                            isSuccess:
+                                type: boolean
+                                example: false
+                            code:
+                                type: integer
+                                example: COMMON001
+                            message:
+                                type: string
+                                example: 잘못된 요청입니다
+
+                "500":
+                    description: 서버 에러
+                    schema:
+                        type: object
+                        properties:
+                            status:
+                                type: integer
+                                example: 500
+                            isSuccess:
+                                type: boolean
+                                example: false
+                            code:
+                                type: integer
+                                example: COMMON000
+                            message:
+                                type: string
+                                example: 서버 에러, 관리자에게 문의 바랍니다.
